Django-React-Nginx-Postgres/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Django
spec:
   replicas: 2
   selector:
    matchLabels:
      app: DjangoReactApp
      tier: backend
      track: stable
   template:
    metadata:
      labels:
        app: DjangoReactApp
        tier: backend
        track: stable
    spec:
      containers:
        - name: django-container        
          image: gerrome/django-react-app_backend:1.2
          imagePullPolicy: Always             
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: DjangoService
spec:
  type: ClusterIP
  selector:
    app: DjangoReactApp
    tier: backend
  ports:
  - name: http
    port: 80
    targetPort: 8000
