Django-React-Nginx-Postgres/django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DjangoDeployment
  labels:
    app: backend  
spec:
   replicas: 2
   selector:
    matchLabels:
      app: backend
   template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: django-container        
          image: gerrome/django-react-app_backend:1.2
          imagePullPolicy: Always             
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: DjangoService
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 8000
