Django-React-Nginx-Postgres/postgres-statefulset.yml
apiVersion: v1
kind: Service 
metadata:
  name: PostgresService
spec:
   selector:
      app: DjangoReactApp
   ports:
      - protocol: TCP
        port: 5432
        targetPort: 5432       

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: Postgres
spec:
   serviceName: PostgresService 
   replicas: 1
   selector:
    matchLabels:
      app: DjangoReactApp
   template:
    metadata:
      labels:
        app: DjangoReactApp
        selector: DjangoReactApp
    spec:
      containers:
        - name: postgres-container
          image: postgres:10.1-alpine
          ports: 
            - containerPort: 5432
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
