Django-React-Nginx-Postgres/postgres.yml
apiVersion: v1
kind: Service 
metadata:
  name: pgdb
  namespace: django-react-app  
  labels:
    app: pgdb
spec:
   selector:
      app: pgdb
   ports:
      - protocol: TCP
        port: 5432
        targetPort: 5432        
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: django-react-app  
  labels:
    app: pgdb
spec:
   serviceName: pgdb
   replicas: 1
   selector:
    matchLabels:
      app: pgdb
   template:
    metadata:
      labels:
        app: pgdb
        selector: pgdb
    spec:
      containers:
        - name: postgres-container
          image: postgres:10.1-alpine
          ports: 
            - containerPort: 5432
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
