Django-React-Nginx-Postgres/react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: django-react-app  
  labels:
    app: client  
spec:
   replicas: 2
   selector:
    matchLabels:
      app: client
   template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: react-container
          image: gerrome/django-react-app_client:5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: django-react-app  
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 80
    targetPort: 80
